--- a/vcweb/lighterprints/static/css/lighterprints/style.css
+++ b/vcweb/lighterprints/static/css/lighterprints/style.css
@@ -43,16 +43,16 @@ h4.challenge-name {
     border-left: 1px solid #ddd;
     border-right: 1px solid #ddd;
 }
-..expired-challenge {
+.expired.challenge {
     color: red;
 }
-a.upcoming-challenge, a.expired-challenge, a.perform-challenge, a.completed-challenge {
+a.upcoming.challenge, a.expired.challenge, a.available.challenge, a.completed.challenge {
     text-transform: uppercase;
     color: #FFF !important;
     -webkit-font-smoothing: antialiased;
     background-repeat: repeat-x;
 }
-a.upcoming-challenge {
+a.upcoming.challenge {
     background-color: hsl(0, 0%, 54%) !important;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f4f4f4", endColorstr="#898989");
     background-image: -khtml-gradient(linear, left top, left bottom, from(#f4f4f4), to(#898989));
@@ -65,7 +65,7 @@ a.upcoming-challenge {
     border-color: #898989 #898989 hsl(0, 0%, 43.5%);
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.69);
 }
-a.expired-challenge {
+a.expired.challenge {
     background-color: hsl(0, 100%, 79%) !important;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ffbcbc", endColorstr="#ff9393");
     background-image: -khtml-gradient(linear, left top, left bottom, from(#ffbcbc), to(#ff9393));
@@ -78,7 +78,7 @@ a.expired-challenge {
     border-color: #ff9393 #ff9393 hsl(0, 100%, 77%);
     text-shadow: 0 1px 1px rgba(255, 255, 255, 0.13);
 }
-a.perform-challenge,a.completed-challenge {
+a.available.challenge,a.completed.challenge {
     background-color: hsl(96, 81%, 42%) !important;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#66dd17", endColorstr="#59c114");
     background-image: -khtml-gradient(linear, left top, left bottom, from(#66dd17), to(#59c114));
