more fixes for issue 120 and issue 124, dealing with the mess of round data creation not having clearly defined boundaries. they may get created when copying values from the previous round to the next round, e.g., transferring resource levels and participant data or when initializing a round for the very first time).
may be cleaner to have round data only created at the start of a new round, and to perform the logic of transferring previous round data at the start of a new round as well, would remove the need for the special case logic in get_or_create_round_data but that will be left for a larger refactor at some point

--- a/vcweb/bound/templates/bound/participate.html
+++ b/vcweb/bound/templates/bound/participate.html
@@ -656,8 +656,9 @@ function onYouTubeIframeAPIReady() {
                 model.currentInterval(intervalId);
             }
             model.clearCurrentInterval = function() {
-               if (model.currentInterval()) {
-                    clearInterval(model.currentInterval());
+                var currentIntervalId = model.currentInterval();
+                if (currentIntervalId) {
+                    clearInterval(currentIntervalId);
                     model.currentInterval(undefined);
                 }
             }
